L07 - get user by username
