# routes/user.js
@@ -7,7 +7,7 @@ router.get('/', usersController.getAllUsers);
 router.get('/:id', usersController.getSingleUser);
 router.post('/', validation.saveUser, usersController.createUser);
 router.put('/:id', validation.saveUser, usersController.updateUser);
-// router.get('/:username', usersController.getSingleUser);  
+router.get('/by-username/:username', usersController.getUserByUsername);
 router.delete('/:id', usersController.deleteUser);
 
 module.exports = router;
